--- a/index.html
+++ b/index.html
@@ -153,28 +153,28 @@
 					<div class="page-title prizes-title">Призы</div>
 					<div class="prizes-subtitle">Получите шанс выиграть призы <br>из переработанных материалов</div>
 					<div class="prizes main-prizes">
-						<div class="prize">
+						<div class="prize prize1">
 							<div class="prize-img">
 								<img srcset="img/prize1.png 1x, img/prize1@2x.png 2x" alt="">
 							</div>
 							<div class="prize-title">20 000 баллов</div>
 							<div class="prize-text">на Выручай-карту</div>
 						</div>
-						<div class="prize">
+						<div class="prize prize2">
 							<div class="prize-img">
 								<img srcset="img/prize2.png 1x, img/prize2@2x.png 2x" alt="">
 							</div>
 							<div class="prize-title">Стакан</div>
 							<div class="prize-text">из кофейной гущи</div>
 						</div>
-						<div class="prize">
+						<div class="prize prize3">
 							<div class="prize-img">
 								<img srcset="img/prize3.png 1x, img/prize3@2x.png 2x" alt="">
 							</div>
 							<div class="prize-title">Термокружка</div>
 							<div class="prize-text">из переработанного <br>пластика</div>
 						</div>
-						<div class="prize">
+						<div class="prize prize4">
 							<div class="prize-img">
 								<img srcset="img/prize4.png 1x, img/prize4@2x.png 2x" alt="">
 							</div>
