--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 					<a href="index.html" class="logo"></a>
 					<a href="#!" class="burger"></a>
 					<nav class="menu-links">
-						<a href="index.html" class="menu-link active">Главная</a>
-						<a href="index.html#prizes" class="menu-link">Призы</a>
+						<a href="/" class="menu-link active">Главная</a>
+						<a href="#prizes" class="menu-link anchor">Призы</a>
 						<div class="menu-link dropdown-link">
 							<span>Dream Green</span>
 							<div class="dropdown-menu">
-								<a href="#!" class="menu-link">Заказник Шугаринский</a>
-								<a href="#!" class="menu-link">Стратегия JDE</a>
-								<a href="#!" class="menu-link">Как сохранить лес</a>
+								<a href="zakaznik.html" class="menu-link">Заказник Шугаринский</a>
+								<a href="strategy.html" class="menu-link">Стратегия JDE</a>
+								<a href="safe-forest.html" class="menu-link">Как сохранить лес</a>
 							</div>
 						</div>
 						<a href="winners.html" class="menu-link">Победители</a>
@@ -55,7 +55,7 @@
 					</div>
 					<div class="kv-buttons">
 						<div class="btn-wrapper">
-							<a href="#!" class="btn">Акция</a>
+							<a href="#steps" class="btn anchor">Акция</a>
 						</div>
 						<div class="btn-wrapper">
 							<a href="#!" class="btn pop-op" data-popup="auth">зарегистрировать чек</a>
@@ -108,7 +108,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="steps">
+					<div id="steps" class="steps">
 						<div class="step">
 							<div class="step-img">
 								<img srcset="img/step1.png 1x, img/step1@2x.png 2x" alt="">
@@ -221,7 +221,7 @@
 						</div>
                     </form>
                     <div class="reg-text">
-                    	Если ты впервые <br>на сайте, то тебе необходимо
+                    	Если вы впервые <br>на сайте, то вам необходимо
                     	<a href="#!" class="link popup-link pop-op" data-popup="reg">Зарегистрироваться</a>
                     </div>
                 </div>
@@ -296,7 +296,7 @@
                 <div class="popup__inner">
                     <div class="popup__title">Восстановление <br>пароля</div>
                     <form class="popup-form">
-                    	<div class="popup__desc before-send">Введи email, указанный при регистрации. <br>Мы вышлем на него новый пароль.</div>
+                    	<div class="popup__desc before-send">Введите email, указанный при регистрации. <br>Мы вышлем на него новый пароль.</div>
                     	<div class="popup__desc after-send" style="display: none;">Пароль был отправлен в сообщении</div>
                     	<div class="input-field">
                     		<input type="text" name="email" placeholder="E-mail" required>
@@ -316,7 +316,7 @@
 				<a href="#!" class="close-popup js-close-popup"></a>
                 <div class="popup__inner">
                 	<div class="popup__title">Обращение <br>принято</div>
-                    <div class="popup__desc">Ожидай ответа на указанную <br>электронную почту. Спасибо!</div>
+                    <div class="popup__desc">Ожидайте ответа на указанную <br>электронную почту. Спасибо!</div>
                     <div class="btn-wrapper">
 						<a href="#!" class="btn js-close-popup">Понятно</a>
 					</div>
