--- a/lk.html
+++ b/lk.html
@@ -36,10 +36,10 @@
 							</div>
 						</div>
 						<a href="winners.html" class="menu-link">Победители</a>
-						<a href="product.html" class="menu-link active">Продукт</a>
+						<a href="product.html" class="menu-link">Продукт</a>
 						<a href="#!" class="menu-link" target="_blank">Правила</a>
 						<a href="faq.html" class="menu-link">FAQ</a>
-						<a href="lk.html" class="menu-link login-link">Личный кабинет</a>
+						<a href="lk.html" class="menu-link login-link active">Личный кабинет</a>
 					</nav>
 					<img src="img/logo-5ka.svg" class="logo-5ka" alt="">
 				</div>
