--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 					<a href="index.html" class="logo"></a>
 					<a href="#!" class="burger"></a>
 					<nav class="menu-links">
-						<a href="/" class="menu-link active">Главная</a>
+						<a href="#main" class="menu-link anchor active">Главная</a>
 						<a href="#prizes" class="menu-link anchor">Призы</a>
 						<div class="menu-link dropdown-link">
 							<span>Dream Green</span>
 							<div class="dropdown-menu">
-								<a href="zakaznik.html" class="menu-link">Заказник Шугаринский</a>
+								<a href="zakaznik.html" class="menu-link">Заказник Шунгеровский</a>
 								<a href="strategy.html" class="menu-link">Стратегия JDE</a>
 								<a href="safe-forest.html" class="menu-link">Как сохранить лес</a>
 							</div>
