--- a/strategy.html
+++ b/strategy.html
@@ -44,40 +44,45 @@
 					<img src="img/logo-5ka.svg" class="logo-5ka mobile-visible" alt="">
 				</div>
 			</header>
-			<section class="zakaznik1-block">
+			<section class="strategy1-block">
 				<div class="container">
 					<img src="img/dream-green/dream-green-logo.png" class="dream-green-logo" alt="">
-					<div class="zakaznik1-title1">заказник «Шунгеровский»</div>
-					<div class="zakaznik1-title2">Проект восстановления хвойных лесов</div>
+					<div class="strategy1-title1">как ооо «якобс дау эгбертс рус»</div>
+					<div class="strategy1-title2">ЗАБОТИТСЯ О ПРИРОДЕ!</div>
 				</div>
 			</section>
-			<section class="zakaznik2-block">
+			<section class="strategy2-block">
 				<div class="container">
-					<div class="zakaznik2-title1">Местоположение</div>
-					<div class="zakaznik2-text">Россия, Санкт-Петербург, Петродворцовый район, <br>посёлок Стрельна, Шунгеровский лесопарк, <br>Х км от завода ООО «ЯКОБС ДАУ ЭГБЕРТС РУС»</div>
+					<div class="strategy2-title1">Производство</div>
+					<div class="strategy2-text">снижение негативного воздействия <br>на окружающую среду</div>
 				</div>
 			</section>
-			<section class="zakaznik3-block">
+			<section class="strategy3-block">
+				<div class="facts1"></div>
+			</section>
+			<section class="strategy4-block">
 				<div class="container">
-					<div class="zakaznik3-title1">Статус заказника</div>
-					<div class="zakaznik3-text">ОСОБО ОХРАНЯЕМАЯ <br>ПРИРОДНАЯ ТЕРРИТОРИЯ</div>
+					<div class="strategy4-title1">Продукт</div>
+					<div class="strategy4-product"></div>
+					<div class="strategy4-text">Разрабатывает более экологичную упаковку <br class="desktop-visible">и внедряет упаковку с меньшим весом</div>
 				</div>
 			</section>
-			<section class="zakaznik4-block">
+			<section class="strategy5-block">
+				<div class="facts2"></div>
+			</section>
+			<section class="strategy6-block">
 				<div class="container">
-					<div class="zakaznik4-title1">Особенности <br>заказника</div>
+					<div class="strategy6-title1">Корпоративная культура</div>
+					<div class="strategy6-text">Внедряет образовательные программы <br>и сотрудничает с фондами</div>
 				</div>
+			</section>
+			<section class="strategy7-block">
 				<div class="zakaznik4-slider">
 					<div class="zakaznik4-slide">
 						<div class="zakaznik4-slide-img">
 							<img src="img/dream-green/2/slider/DJI_0244.jpg" alt="">
 						</div>
 					</div>
-					<!-- <div class="zakaznik4-slide">
-						<div class="zakaznik4-slide-img">
-							<img src="img/dream-green/2/slider/plug.jpg" alt="">
-						</div>
-					</div> -->
 					<div class="zakaznik4-slide">
 						<div class="zakaznik4-slide-img">
 							<img src="img/dream-green/2/slider/DJI_0256.jpg" alt="">
@@ -100,38 +105,71 @@
 					</div>
 				</div>
 				<div class="container">
-					<div class="zakaznik3-text">Богатая флора и фауна, <br>в том числе из Красной книги</div>
+					<div class="strategy7-text">Много лет поддерживаем благотворительные проекты, взаимодействуем с экологическми организациями, устраиваем волонтерские акции. Наши партнеры: «Фонд продовольствия Русь», «Старость в радость», «Раздельный сбор», «Крышечки доброты».</div>
 				</div>
+				<div class="facts3"></div>
 			</section>
-			<section class="zakaznik5-block">
+			<section class="strategy8-block">
 				<div class="container">
-					<div class="zakaznik5-title1">Проблемы</div>
-					<div class="zakaznik5-text">
-						Рост числа посетителей <br><br class="mobile-visible">
-						Непотушенные костры <br><br class="mobile-visible">
-						Срубленные деревья <br><br class="mobile-visible">
-						Многочисленные вытоптанные тропинки <br><br class="mobile-visible">
-						и следы квадроциклов
+					<div class="strategy8-title1">ВОВЛЕЧЕНИЕ <br>ПОТРЕБИТЕЛЕЙ</div>
+					<div class="strategy8-text">
+						Купите кофе Jacobs в «Пятёрочке» <br>и часть собранной суммы пойдёт <br>на восстановление лесов*
 					</div>
 				</div>
+				<div class="strategy8-kv"></div>
 			</section>
-			<section class="zakaznik6-block">
+			<div class="strategy9-block">
 				<div class="container">
-					<div class="zakaznik6-title1">Помощь</div>
-					<div class="zakaznik6-text">
-						Посадка сеянцев в количестве <br>нескольких тысяч штук <br><br>
-						заграждение путей проезда <br>автотранспорта <br><br>
-						установка информационных <br>знаков и стендов<br><br>
-						ликвидация свалки мусора<br><br>
-						предотвращение заболачивания
+					<div class="strategy9-title1">Дает возможность участия в заботе об экологически чистом мире</div>
+					<div class="steps">
+						<div class="step">
+							<div class="step-img">
+								<img srcset="img/step1.png 1x, img/step1@2x.png 2x" alt="">
+							</div>
+							<div class="step-info">
+								<div class="step-title">Купите кофе jacobs</div>
+								<div class="step-text">с Выручай-картой</div>
+							</div>
+						</div>
+						<div class="step">
+							<div class="step-img">
+								<img srcset="img/step2.png 1x, img/step2@2x.png 2x" alt="">
+							</div>
+							<div class="step-info">
+								<div class="step-title">Зарегистрируйте чек</div>
+								<div class="step-text">на сайте</div>
+								<div class="btn-wrapper mobile-visible">
+									<a href="#!" class="btn pop-op" data-popup="auth">Зарегистрировать чек</a>
+								</div>
+							</div>
+						</div>
+						<div class="step">
+							<div class="step-img">
+								<img srcset="img/step3.png 1x, img/step3@2x.png 2x" alt="">
+							</div>
+							<div class="step-info">
+								<div class="step-title">выиграйте**</div>
+								<div class="step-text">
+									<span class="desktop-visible">баллы на Выручай-карту и призы из переработанных материалов</span>
+									<span class="mobile-visible">баллы на Выручай-карту и эко-призы</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="btn-wrapper desktop-visible">
+						<a href="#!" class="btn pop-op" data-popup="auth">Зарегистрировать чек</a>
 					</div>
 				</div>
-			</section>
+			</div>
 			<section class="fond-block">
+				<div class="facts4"></div>
 				<div class="container">
 					<div class="fond-title">Проект реализуется при поддержке <span>Фонда «Заповедное посольство».</span></div>
 					<div class="fond-img">
 						<img src="img/dream-green/fond.png" alt="">
+					</div>
+					<div class="btn-wrapper fond-btn-wrapper">
+						<a href="#!" class="btn btn-green fond-btn pop-op" data-popup="auth">Принять участие</a>
 					</div>
 				</div>
 			</section>
