--- a/zakaznik.html
+++ b/zakaznik.html
@@ -30,7 +30,7 @@
 						<div class="menu-link dropdown-link active">
 							<span>Dream Green</span>
 							<div class="dropdown-menu">
-								<a href="zakaznik.html" class="menu-link">Заказник Шугаринский</a>
+								<a href="zakaznik.html" class="menu-link">Заказник Шунгеровский</a>
 								<a href="strategy.html" class="menu-link">Стратегия JDE</a>
 								<a href="safe-forest.html" class="menu-link">Как сохранить лес</a>
 							</div>
