--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							<div class="safe-info">
 								<div class="safe-title">Производство</div>
 								<div class="safe-text">снижение <br class="desktop-visible">негативного <br class="mobile-visible">воздействия на <br>окружающую среду</div>
-								<a href="#!" class="safe-link">Подробнее...</a>
+								<a href="strategy.html#strategy2" class="safe-link">Подробнее...</a>
 							</div>
 						</div>
 						<div class="safe">
@@ -84,7 +84,7 @@
 							<div class="safe-info">
 								<div class="safe-title">Продукт</div>
 								<div class="safe-text">Разрабатывает более <br>экологичную упаковку <br>и внедряет упаковку <br>с меньшим весом</div>
-								<a href="#!" class="safe-link">Подробнее...</a>
+								<a href="strategy.html#strategy4" class="safe-link">Подробнее...</a>
 							</div>
 						</div>
 						<div class="safe">
@@ -94,7 +94,7 @@
 							<div class="safe-info">
 								<div class="safe-title">Корпоративная культура</div>
 								<div class="safe-text">Внедряет <br class="desktop-visible">образовательные <br>программы <br class="desktop-visible">и сотрудничает <br>с фондами</div>
-								<a href="#!" class="safe-link">Подробнее...</a>
+								<a href="strategy.html#strategy6" class="safe-link">Подробнее...</a>
 							</div>
 						</div>
 						<div class="safe">
@@ -104,7 +104,7 @@
 							<div class="safe-info">
 								<div class="safe-title">Вовлечение потребителей</div>
 								<div class="safe-text">Дает возможность <br>участия в заботе <br>об экологически <br>чистом мире</div>
-								<a href="#!" class="safe-link">Подробнее...</a>
+								<a href="strategy.html#strategy8" class="safe-link">Подробнее...</a>
 							</div>
 						</div>
 					</div>
