--- a/strategy.html
+++ b/strategy.html
@@ -51,7 +51,7 @@
 					<div class="strategy1-title2">ЗАБОТИТСЯ О ПРИРОДЕ!</div>
 				</div>
 			</section>
-			<section class="strategy2-block">
+			<section id="strategy2" class="strategy2-block">
 				<div class="container">
 					<div class="strategy2-title1">Производство</div>
 					<div class="strategy2-text">снижение негативного воздействия <br>на окружающую среду</div>
@@ -60,7 +60,7 @@
 			<section class="strategy3-block">
 				<div class="facts1"></div>
 			</section>
-			<section class="strategy4-block">
+			<section id="strategy4" class="strategy4-block">
 				<div class="container">
 					<div class="strategy4-title1">Продукт</div>
 					<div class="strategy4-product"></div>
@@ -70,7 +70,7 @@
 			<section class="strategy5-block">
 				<div class="facts2"></div>
 			</section>
-			<section class="strategy6-block">
+			<section id="strategy6" class="strategy6-block">
 				<div class="container">
 					<div class="strategy6-title1">Корпоративная культура</div>
 					<div class="strategy6-text">Внедряет образовательные программы <br>и сотрудничает с фондами</div>
@@ -109,7 +109,7 @@
 				</div>
 				<div class="facts3"></div>
 			</section>
-			<section class="strategy8-block">
+			<section id="strategy8" class="strategy8-block">
 				<div class="container">
 					<div class="strategy8-title1">ВОВЛЕЧЕНИЕ <br>ПОТРЕБИТЕЛЕЙ</div>
 					<div class="strategy8-text">
