--- a/product.html
+++ b/product.html
@@ -62,7 +62,7 @@
 										<img srcset="img/products/1/1.png 1x, img/products/1/1@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
-										Кофе Jacobs Monarch <br>растворимый <span>95 г / 190 г / 270 г</span>
+										Кофе Jacobs Monarch <br>растворимый <span>95 г / 190 г</span>
 									</div>
 								</div>
 								<div class="product">
@@ -70,7 +70,7 @@
 										<img srcset="img/products/1/2.png 1x, img/products/1/2@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
-										Кофе JACOBS Monarch <br>растворимый <span>75 г / 150 г / 240 г / 500 г</span>
+										Кофе JACOBS Monarch <br>растворимый <span>75 г / 150 г / 210 г</span>
 									</div>
 								</div>
 								<div class="product">
@@ -118,7 +118,7 @@
 										<img srcset="img/products/1/8.png 1x, img/products/1/8@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
-										Кофе Jacobs Gold <br>растворимый <span>95 г / 190 г</span>
+										Кофе Jacobs Gold <br>растворимый <span>95 г</span>
 									</div>
 								</div>
 								<div class="product">
@@ -126,7 +126,7 @@
 										<img srcset="img/products/1/9.png 1x, img/products/1/9@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
-										Кофе Jacobs Gold <br>растворимый <span>140 г / 500 г</span>
+										Кофе Jacobs Gold <br>растворимый <span>140 г</span>
 									</div>
 								</div>
 								<div class="product">
@@ -142,7 +142,7 @@
 										<img srcset="img/products/1/11.png 1x, img/products/1/11@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
-										Кофе Jacobs Crema <br>растворимый <span>70 г</span>
+										Кофе Jacobs Crema <br>растворимый <span>230 г</span>
 									</div>
 								</div>
 								<div class="product">
@@ -158,7 +158,7 @@
 										<img srcset="img/products/1/13.png 1x, img/products/1/13@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
-										Кофе JACOBS Monarch Velour <br>растворимый <span>70 г / 140 г</span>
+										Кофе JACOBS Monarch Velour <br>растворимый <span>70 г</span>
 									</div>
 								</div>
 								<div class="product">
@@ -166,7 +166,7 @@
 										<img srcset="img/products/1/14.png 1x, img/products/1/14@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
-										Кофе Jacobs Millicano <br>растворимый <span>90 г / 95 г / 160 г</span>
+										Кофе Jacobs Millicano <br>растворимый <span>90 г / 160 г</span>
 									</div>
 								</div>
 								<div class="product">
@@ -174,39 +174,47 @@
 										<img srcset="img/products/1/15.png 1x, img/products/1/15@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
-										Кофе Jacobs Millicano <br>растворимый <span>75 г / 120 г / 200 г</span>
+										Кофе Jacobs Millicano <br>растворимый <span>75 г</span>
 									</div>
 								</div>
-								<div class="product">
+								<!-- <div class="product">
 									<div class="product-img">
 										<img srcset="img/products/1/16.png 1x, img/products/1/16@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
 										Кофе JACOBS Millicano Alto <br>Intenso растворимый <span>90 г</span>
 									</div>
-								</div>
-								<div class="product">
+								</div> -->
+								<!-- <div class="product">
 									<div class="product-img">
 										<img srcset="img/products/1/17.png 1x, img/products/1/17@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
 										Кофе JACOBS Millicano Alto <br>Intenso растворимый <span>110 г</span>
 									</div>
-								</div>
-								<div class="product">
+								</div> -->
+								<!-- <div class="product">
 									<div class="product-img">
 										<img srcset="img/products/1/18.png 1x, img/products/1/18@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
 										Кофе JACOBS Millicano Crema <br>Espresso <span>95 г</span>
 									</div>
-								</div>
-								<div class="product">
+								</div> -->
+								<!-- <div class="product">
 									<div class="product-img">
 										<img srcset="img/products/1/19.png 1x, img/products/1/19@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
 										Кофе JACOBS Millicano Crema <br>Espresso <span>75 г</span>
+									</div>
+								</div> -->
+								<div class="product">
+									<div class="product-img">
+										<img srcset="img/products/1/20.png 1x, img/products/1/20@2x.png 2x" alt="">
+									</div>
+									<div class="product-name">
+										Декофеинизированный <br>JACOBS Day&Night<span>95 г</span>
 									</div>
 								</div>
 							</div>
@@ -221,22 +229,22 @@
 										Кофе JACOBS Monarch <br>молотый <span>70 г / 230 г</span>
 									</div>
 								</div>
-								<div class="product">
+								<!-- <div class="product">
 									<div class="product-img">
 										<img srcset="img/products/2/2.png 1x, img/products/2/2@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
 										Кофе JACOBS Crema <br>молотый <span>230 г</span>
 									</div>
-								</div>
-								<div class="product">
+								</div> -->
+								<!-- <div class="product">
 									<div class="product-img">
 										<img srcset="img/products/2/3.png 1x, img/products/2/3@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
 										Кофе JACOBS Espresso <br>молотый <span>230 г</span>
 									</div>
-								</div>
+								</div> -->
 								<div class="product">
 									<div class="product-img">
 										<img srcset="img/products/2/4.png 1x, img/products/2/4@2x.png 2x" alt="">
@@ -254,25 +262,25 @@
 										<img srcset="img/products/3/1.png 1x, img/products/3/1@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
-										Кофе JACOBS Monarch <br>классический в зёрнах <span>230 г / 1000 г</span>
+										Кофе JACOBS Monarch <br>классический в зёрнах <span>230 г / 800 г</span>
 									</div>
 								</div>
-								<div class="product">
+								<!-- <div class="product">
 									<div class="product-img">
 										<img srcset="img/products/3/2.png 1x, img/products/3/2@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
 										Кофе JACOBS Espresso <br>в зёрнах <span>230 г</span>
 									</div>
-								</div>
-								<div class="product">
+								</div> -->
+								<!-- <div class="product">
 									<div class="product-img">
 										<img srcset="img/products/3/3.png 1x, img/products/3/3@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
 										Кофе JACOBS Crema <br>в зёрнах <span>230 г / 1000 г</span>
 									</div>
-								</div>
+								</div> -->
 								<div class="product">
 									<div class="product-img">
 										<img srcset="img/products/3/4.png 1x, img/products/3/4@2x.png 2x" alt="">
@@ -281,24 +289,32 @@
 										Кофе JACOBS Barista Editions <br>Crema в зёрнах <span>230 г / 1000 г</span>
 									</div>
 								</div>
-								<div class="product">
+								<!-- <div class="product">
 									<div class="product-img">
 										<img srcset="img/products/3/5.png 1x, img/products/3/5@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
 										Кофе JACOBS Barista Editions <br>Espresso в зёрнах <span>1000 г</span>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="tab-item product-tab-item tab-group4">
 							<div class="products">
-								<div class="product">
+								<!-- <div class="product">
 									<div class="product-img">
 										<img srcset="img/products/4/1.png 1x, img/products/4/1@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
 										Кофе JACOBS Lungo 8 <br>Intenso в капсулах  <span>52 г</span>
+									</div>
+								</div> -->
+								<div class="product">
+									<div class="product-img">
+										<img srcset="img/products/4/3.png 1x, img/products/4/3@2x.png 2x" alt="">
+									</div>
+									<div class="product-name">
+										Кофе JACOBS Espresso 7 <br>Classico в капсулах <span>52 г</span>
 									</div>
 								</div>
 								<div class="product">
@@ -309,14 +325,7 @@
 										Кофе JACOBS Espresso 10 <br>Intenso в капсулах <span>52 г</span>
 									</div>
 								</div>
-								<div class="product">
-									<div class="product-img">
-										<img srcset="img/products/4/3.png 1x, img/products/4/3@2x.png 2x" alt="">
-									</div>
-									<div class="product-name">
-										Кофе JACOBS Espresso 7 <br>Classico в капсулах <span>52 г</span>
-									</div>
-								</div>
+								
 							</div>
 						</div>
 					</div>
@@ -330,7 +339,7 @@
 											<img srcset="img/products/1/1.png 1x, img/products/1/1@2x.png 2x" alt="">
 										</div>
 										<div class="product-name">
-											Кофе Jacobs Monarch <br>растворимый <span>95 г / 190 г / 270 г</span>
+											Кофе Jacobs Monarch <br>растворимый <span>95 г / 190 г</span>
 										</div>
 									</div>
 								</div>
@@ -340,7 +349,7 @@
 											<img srcset="img/products/1/2.png 1x, img/products/1/2@2x.png 2x" alt="">
 										</div>
 										<div class="product-name">
-											Кофе JACOBS Monarch <br>растворимый <span>75 г / 150 г / 240 г / 500 г</span>
+											Кофе JACOBS Monarch <br>растворимый <span>75 г / 150 г / 210 г</span>
 										</div>
 									</div>
 								</div>
@@ -400,7 +409,7 @@
 											<img srcset="img/products/1/8.png 1x, img/products/1/8@2x.png 2x" alt="">
 										</div>
 										<div class="product-name">
-											Кофе Jacobs Gold <br>растворимый <span>95 г / 190 г</span>
+											Кофе Jacobs Gold <br>растворимый <span>95 г</span>
 										</div>
 									</div>
 								</div>
@@ -410,7 +419,7 @@
 											<img srcset="img/products/1/9.png 1x, img/products/1/9@2x.png 2x" alt="">
 										</div>
 										<div class="product-name">
-											Кофе Jacobs Gold <br>растворимый <span>140 г / 500 г</span>
+											Кофе Jacobs Gold <br>растворимый <span>140 г</span>
 										</div>
 									</div>
 								</div>
@@ -430,7 +439,7 @@
 											<img srcset="img/products/1/11.png 1x, img/products/1/11@2x.png 2x" alt="">
 										</div>
 										<div class="product-name">
-											Кофе Jacobs Crema <br>растворимый <span>70 г</span>
+											Кофе Jacobs Crema <br>растворимый <span>230 г</span>
 										</div>
 									</div>
 								</div>
@@ -450,7 +459,7 @@
 											<img srcset="img/products/1/13.png 1x, img/products/1/13@2x.png 2x" alt="">
 										</div>
 										<div class="product-name">
-											Кофе JACOBS Monarch Velour <br>растворимый <span>70 г / 140 г</span>
+											Кофе JACOBS Monarch Velour <br>растворимый <span>70 г</span>
 										</div>
 									</div>
 								</div>
@@ -460,7 +469,7 @@
 											<img srcset="img/products/1/14.png 1x, img/products/1/14@2x.png 2x" alt="">
 										</div>
 										<div class="product-name">
-											Кофе Jacobs Millicano <br>растворимый <span>90 г / 95 г / 160 г</span>
+											Кофе Jacobs Millicano <br>растворимый <span>90 г / 160 г</span>
 										</div>
 									</div>
 								</div>
@@ -470,11 +479,11 @@
 											<img srcset="img/products/1/15.png 1x, img/products/1/15@2x.png 2x" alt="">
 										</div>
 										<div class="product-name">
-											Кофе Jacobs Millicano <br>растворимый <span>75 г / 120 г / 200 г</span>
+											Кофе Jacobs Millicano <br>растворимый <span>75 г</span>
 										</div>
 									</div>
 								</div>
-								<div class="product-slide">
+								<!-- <div class="product-slide">
 									<div class="product">
 										<div class="product-img">
 											<img srcset="img/products/1/16.png 1x, img/products/1/16@2x.png 2x" alt="">
@@ -483,8 +492,8 @@
 											Кофе JACOBS Millicano Alto <br>Intenso растворимый <span>90 г</span>
 										</div>
 									</div>
-								</div>
-								<div class="product-slide">
+								</div> -->
+								<!-- <div class="product-slide">
 									<div class="product">
 										<div class="product-img">
 											<img srcset="img/products/1/17.png 1x, img/products/1/17@2x.png 2x" alt="">
@@ -493,8 +502,8 @@
 											Кофе JACOBS Millicano Alto <br>Intenso растворимый <span>110 г</span>
 										</div>
 									</div>
-								</div>
-								<div class="product-slide">
+								</div> -->
+								<!-- <div class="product-slide">
 									<div class="product">
 										<div class="product-img">
 											<img srcset="img/products/1/18.png 1x, img/products/1/18@2x.png 2x" alt="">
@@ -503,14 +512,24 @@
 											Кофе JACOBS Millicano Crema <br>Espresso <span>95 г</span>
 										</div>
 									</div>
-								</div>
-								<div class="product-slide">
+								</div> -->
+								<!-- <div class="product-slide">
 									<div class="product">
 										<div class="product-img">
 											<img srcset="img/products/1/19.png 1x, img/products/1/19@2x.png 2x" alt="">
 										</div>
 										<div class="product-name">
 											Кофе JACOBS Millicano Crema <br>Espresso <span>75 г</span>
+										</div>
+									</div>
+								</div> -->
+								<div class="product-slide">
+									<div class="product">
+										<div class="product-img">
+											<img srcset="img/products/1/20.png 1x, img/products/1/20@2x.png 2x" alt="">
+										</div>
+										<div class="product-name">
+											Декофеинизированный <br>JACOBS Day&Night<span>95 г</span>
 										</div>
 									</div>
 								</div>
@@ -529,7 +548,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="product-slide">
+								<!-- <div class="product-slide">
 									<div class="product">
 										<div class="product-img">
 											<img srcset="img/products/2/2.png 1x, img/products/2/2@2x.png 2x" alt="">
@@ -538,8 +557,8 @@
 											Кофе JACOBS Crema <br>молотый <span>230 г</span>
 										</div>
 									</div>
-								</div>
-								<div class="product-slide">
+								</div> -->
+								<!-- <div class="product-slide">
 									<div class="product">
 										<div class="product-img">
 											<img srcset="img/products/2/3.png 1x, img/products/2/3@2x.png 2x" alt="">
@@ -548,7 +567,7 @@
 											Кофе JACOBS Espresso <br>молотый <span>230 г</span>
 										</div>
 									</div>
-								</div>
+								</div> -->
 								<div class="product-slide">
 									<div class="product">
 										<div class="product-img">
@@ -570,11 +589,11 @@
 								            <img srcset="img/products/3/1.png 1x, img/products/3/1@2x.png 2x" alt="">
 								        </div>
 								        <div class="product-name">
-								            Кофе JACOBS Monarch <br>классический в зёрнах <span>230 г / 1000 г</span>
+								            Кофе JACOBS Monarch <br>классический в зёрнах <span>230 г / 800 г</span>
 								        </div>
 								    </div>
 								</div>
-								<div class="product-slide">
+								<!-- <div class="product-slide">
 								    <div class="product">
 								        <div class="product-img">
 								            <img srcset="img/products/3/2.png 1x, img/products/3/2@2x.png 2x" alt="">
@@ -583,8 +602,8 @@
 								            Кофе JACOBS Espresso <br>в зёрнах <span>230 г</span>
 								        </div>
 								    </div>
-								</div>
-								<div class="product-slide">
+								</div> -->
+								<!-- <div class="product-slide">
 								    <div class="product">
 								        <div class="product-img">
 								            <img srcset="img/products/3/3.png 1x, img/products/3/3@2x.png 2x" alt="">
@@ -593,18 +612,18 @@
 								            Кофе JACOBS Crema <br>в зёрнах <span>230 г / 1000 г</span>
 								        </div>
 								    </div>
-								</div>
+								</div> -->
 								<div class="product-slide">
 								    <div class="product">
 								        <div class="product-img">
 								            <img srcset="img/products/3/4.png 1x, img/products/3/4@2x.png 2x" alt="">
 								        </div>
 								        <div class="product-name">
-								            Кофе JACOBS Barista Editions <br>Crema в зёрнах <span>230 г / 1000 г</span>
+								            Кофе JACOBS Barista Editions <br>Crema в зёрнах <span>230 г</span>
 								        </div>
 								    </div>
 								</div>
-								<div class="product-slide">
+								<!-- <div class="product-slide">
 								    <div class="product">
 								        <div class="product-img">
 								            <img srcset="img/products/3/5.png 1x, img/products/3/5@2x.png 2x" alt="">
@@ -613,19 +632,29 @@
 								            Кофе JACOBS Barista Editions <br>Espresso в зёрнах <span>1000 г</span>
 								        </div>
 								    </div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="product-group">
 							<div class="products-slider-title">Капсулы</div>
 							<div class="products-slider">
-								<div class="product-slide">
+								<!-- <div class="product-slide">
 									<div class="product">
 										<div class="product-img">
 											<img srcset="img/products/4/1.png 1x, img/products/4/1@2x.png 2x" alt="">
 										</div>
 										<div class="product-name">
 											Кофе JACOBS Lungo 8 <br>Intenso в капсулах  <span>52 г</span>
+										</div>
+									</div>
+								</div> -->
+								<div class="product-slide">
+									<div class="product">
+										<div class="product-img">
+											<img srcset="img/products/4/3.png 1x, img/products/4/3@2x.png 2x" alt="">
+										</div>
+										<div class="product-name">
+											Кофе JACOBS Espresso 7 <br>Classico в капсулах <span>52 г</span>
 										</div>
 									</div>
 								</div>
@@ -636,16 +665,6 @@
 										</div>
 										<div class="product-name">
 											Кофе JACOBS Espresso 10 <br>Intenso в капсулах <span>52 г</span>
-										</div>
-									</div>
-								</div>
-								<div class="product-slide">
-									<div class="product">
-										<div class="product-img">
-											<img srcset="img/products/4/3.png 1x, img/products/4/3@2x.png 2x" alt="">
-										</div>
-										<div class="product-name">
-											Кофе JACOBS Espresso 7 <br>Classico в капсулах <span>52 г</span>
 										</div>
 									</div>
 								</div>
