--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 			<section class="steps-block">
 				<div class="container">
 					<div class="safes-title">Как ООО «ЯКОБС ДАУ ЭГБЕРТС РУС» <br>заботится о природе</div>
+					<div class="safes-subtitle"><a href="" class="link">Здесь</a> вы сможете узнать больше о корпоративной ответственности компании</div>
 					<div class="safes">
 						<div class="safe">
 							<div class="safe-img">
