--- a/strategy.html
+++ b/strategy.html
@@ -53,8 +53,11 @@
 			</section>
 			<section id="strategy2" class="strategy2-block">
 				<div class="container">
-					<div class="strategy2-title1">Производство</div>
-					<div class="strategy2-text">снижение негативного воздействия <br>на окружающую среду</div>
+					<div class="strategy2-title1">Производство*</div>
+					<div class="strategy2-text">
+						снижение негативного воздействия <br>на окружающую среду
+						<span>*Кофейный завод компании в Ленинградской области</span>
+					</div>
 				</div>
 			</section>
 			<section class="strategy3-block">
