--- a/product.html
+++ b/product.html
@@ -286,7 +286,7 @@
 										<img srcset="img/products/3/4.png 1x, img/products/3/4@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
-										Кофе JACOBS Barista Editions <br>Crema в зёрнах <span>230 г / 1000 г</span>
+										Кофе JACOBS Barista Editions <br>Crema в зёрнах <span>230 г</span>
 									</div>
 								</div>
 								<!-- <div class="product">
