--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<a href="#steps" class="btn anchor">Акция</a>
 						</div>
 						<div class="btn-wrapper">
-							<a href="#!" class="btn pop-op" data-popup="auth">зарегистрировать чек</a>
+							<a href="#!" class="btn check1 pop-op" data-popup="auth">зарегистрировать чек</a>
 						</div>
 					</div>
 				</div>
@@ -127,7 +127,7 @@
 								<div class="step-title">Зарегистрируйте чек</div>
 								<div class="step-text">на сайте</div>
 								<div class="btn-wrapper mobile-visible">
-									<a href="#!" class="btn pop-op" data-popup="auth">Зарегистрировать чек</a>
+									<a href="#!" class="btn check1 pop-op" data-popup="auth">Зарегистрировать чек</a>
 								</div>
 							</div>
 						</div>
@@ -145,7 +145,7 @@
 						</div>
 					</div>
 					<div class="btn-wrapper desktop-visible">
-						<a href="#!" class="btn pop-op" data-popup="auth">Зарегистрировать чек</a>
+						<a href="#!" class="btn check1 pop-op" data-popup="auth">Зарегистрировать чек</a>
 					</div>
 				</div>
 			</section>
