--- a/product.html
+++ b/product.html
@@ -273,20 +273,20 @@
 										Кофе JACOBS Espresso <br>в зёрнах <span>230 г</span>
 									</div>
 								</div> -->
-								<!-- <div class="product">
-									<div class="product-img">
-										<img srcset="img/products/3/3.png 1x, img/products/3/3@2x.png 2x" alt="">
-									</div>
-									<div class="product-name">
-										Кофе JACOBS Crema <br>в зёрнах <span>230 г / 1000 г</span>
-									</div>
-								</div> -->
 								<div class="product">
 									<div class="product-img">
 										<img srcset="img/products/3/4.png 1x, img/products/3/4@2x.png 2x" alt="">
 									</div>
 									<div class="product-name">
 										Кофе JACOBS Barista Editions <br>Crema в зёрнах <span>230 г</span>
+									</div>
+								</div>
+								<div class="product">
+									<div class="product-img">
+										<img srcset="img/products/3/3.png 1x, img/products/3/3@2x.png 2x" alt="">
+									</div>
+									<div class="product-name">
+										Кофе JACOBS Crema <br>в зёрнах <span>230 г</span>
 									</div>
 								</div>
 								<!-- <div class="product">
@@ -603,16 +603,6 @@
 								        </div>
 								    </div>
 								</div> -->
-								<!-- <div class="product-slide">
-								    <div class="product">
-								        <div class="product-img">
-								            <img srcset="img/products/3/3.png 1x, img/products/3/3@2x.png 2x" alt="">
-								        </div>
-								        <div class="product-name">
-								            Кофе JACOBS Crema <br>в зёрнах <span>230 г / 1000 г</span>
-								        </div>
-								    </div>
-								</div> -->
 								<div class="product-slide">
 								    <div class="product">
 								        <div class="product-img">
@@ -620,6 +610,16 @@
 								        </div>
 								        <div class="product-name">
 								            Кофе JACOBS Barista Editions <br>Crema в зёрнах <span>230 г</span>
+								        </div>
+								    </div>
+								</div>
+								<div class="product-slide">
+								    <div class="product">
+								        <div class="product-img">
+								            <img srcset="img/products/3/3.png 1x, img/products/3/3@2x.png 2x" alt="">
+								        </div>
+								        <div class="product-name">
+								            Кофе JACOBS Crema <br>в зёрнах <span>230 г</span>
 								        </div>
 								    </div>
 								</div>
